--- a/styles/style.module.scss
+++ b/styles/style.module.scss
@@ -735,6 +735,9 @@
             @include mobile_md{
                 width: 50%;
             }
+            @include mobile_xs{
+                width: 100%;
+            }
             .inner{
                 .img_icon{
                     width: 5rem;
@@ -3628,12 +3631,9 @@
     .sec_heading{
         margin-bottom: 3rem;
     }
-    .flex{
-        margin: -1rem;
+    .slide_pkg{
         .col{
             flex: unset;
-            width: calc(100% / 3);
-            padding: 1rem;
             .inner{
                 @include block;
                 position: relative;
@@ -3648,6 +3648,10 @@
                     margin-top: 1rem;
                     border-bottom: 1px solid #ddddddbb;
                     padding-bottom: 1rem;
+                    sub{
+                        font-family: 'Medium';
+                        font-size: 1.3rem;
+                    }
                 }
 
                 ul{
@@ -3669,7 +3673,6 @@
                         }
                     }
                 }
-                
                 .btn_blk{
                     margin-top: 2rem;
                     .site_btn{
@@ -3677,28 +3680,28 @@
                     }
                 }
             }
-            &:last-child{
-                .inner{
-                    text-align: center;
-                    background-image: url(/images/corporate-woman-looking-phone.jpg);
-                    @include bg;
-                    @include flex($flow:column, $justify:center,$align:center);
-                    overflow: hidden;
-                    &:before{
-                        @include pos;
-                        content: '';
-                        background-color: rgba($primary-color, 0.8);
+            
+        }
+        &.owl-carousel{
+            &.owl-theme{
+                .owl-nav{
+                    top: -6.5rem;
+                    @include ipad_sm{
+                        top: 40%;
+                        bottom: unset;
                     }
-                    > *{
-                        position: relative;
+                    .owl-prev{
+                        left: unset;
+                        right: 5.5rem;
+                        @include ipad_sm{
+                            left: 1rem;
+                            right: unset;
+                        }
                     }
-                    h2{
-                        font-size: 2.5rem;
-                        color: $light;
-                        margin-bottom: 2rem;
-                    }
-                    p{
-                        color: $light;
+                    .owl-next{
+                        @include ipad_sm{
+                            right: 1rem;
+                        }
                     }
                 }
             }
@@ -3713,6 +3716,10 @@
             width: 35%;
             padding-right: 2rem;
             align-self: center;
+            @include ipad{
+                width: 100%;
+                padding-right: 0;
+            }
             .sec_heading{
                 margin-bottom: 0;
             }
@@ -3722,12 +3729,22 @@
         }
         .colR{
             width: 65%;
+            @include ipad{
+                width: 100%;
+                margin-top: 2rem;
+            }
             .flex{
                 margin: -1rem;
                 .col{
                     flex: unset;
                     width: calc(100% / 3);
                     padding: 1rem;
+                    @include ipad_sm{
+                        width: 50%;
+                    }
+                    @include mobile_sm{
+                        width: 100%;
+                    }
                     .image{
                         width: 6rem;
                         height: 6rem;
@@ -3752,6 +3769,10 @@
         .colL{
             width: 40%;
             padding-right: 2rem;
+            @include ipad_sm{
+                width: 100%;
+                padding-right: 0;
+            }
             .image{
                 @include img(100%);
                 img{
@@ -3764,6 +3785,183 @@
             width: 60%;
             padding-left: 2rem;
             align-self: center;
+            @include ipad_sm{
+                width: 100%;
+                padding-left: 0;
+                margin-top: 2rem;
+            }
+        }
+    }
+}
+
+
+// ==================main_tenance_dash===========
+.main_tenance_dash{
+    .sec_heading{
+        &.flex{
+            justify-content: space-between;
+            @include mobile_sm{
+                flex-direction: column;
+                gap: 1rem;
+                .site_btn{
+                    width: 100%;
+                }
+            }
+        }
+    }
+    .contract_list{
+        .badge{
+            font-size: 1rem;
+            margin: auto;
+            @include ipad_sm{
+                margin: 0;
+            }
+            &.green{
+                background-color: rgb(1, 90, 1);
+            }
+            &.red{
+                background-color: $color2;
+            }
+            &.yellow{
+                background-color: rgb(167, 142, 4);
+            }
+        }
+        .action_lnks_maintenance{
+            column-gap: 2rem;
+            justify-content: center;
+            display: flex;
+            @include ipad_sm{
+                justify-content: flex-start;
+            }
+            a{
+                font-size: 1.3rem;
+                font-family: 'SemiBold';
+                &.red{
+                    color: $color2;
+                }
+            }
+        }
+    }
+}
+
+
+.main_ul_new{
+    max-width: 40rem;
+    .dim_text_main{
+        font-family: "SemiBold";
+        opacity: 0.5;
+    }
+    p{
+        display: flex;
+        column-gap: 1rem;
+        justify-content: space-between;
+        border-bottom: 1px dashed #ddd;
+        padding-bottom: 1rem;
+    }
+    .badge{
+        font-size: 1rem;
+        &.green{
+            background-color: rgb(1, 90, 1);
+        }
+        &.red{
+            background-color: $color2;
+        }
+        &.yellow{
+            background-color: rgb(167, 142, 4);
+        }
+    }
+}
+
+.profile_grid_maintenance{
+    @include radius(15px);
+    padding: 2rem;
+    background-color: #F9F9F9;
+    min-height: 36rem;
+    max-height: 50rem;
+    overflow: auto;
+    .flex{
+        margin: -1rem;
+        .img_col{
+            width: 25%;
+            padding: 1rem;
+            @include mobile_md{
+                width: calc(100% / 3);
+            }
+            @include mobile_sm{
+                width: 100%;
+            }
+            .inner_img{
+                @include img(90%);
+                box-shadow: none;
+                img{
+                    @include pos;
+                    @include object;
+                }
+            }
+        }
+    }
+}
+
+
+.custom_blk_main{
+    @include block;
+    form{
+        .blk_form{
+            margin-bottom: 1.5rem;
+        }
+        h6{
+            font-size: 1.4rem;
+            font-family: 'Medium';
+            color: #414141;
+            span{
+              color: #A9AE9E;
+            }
+          }
+          .input{
+            border-color: #b1b1b1;
+          }
+    }
+    .add_portfolio_blk{
+        .profile_grid_edit{
+            @include radius(15px);
+            padding: 2rem;
+            background-color: #F9F9F9;
+            height: 36rem;
+            overflow: auto;
+            .flex{
+                margin: -1rem;
+                .img_col{
+                    width: 25%;
+                    padding: 1rem;
+                    @include mobile_md{
+                        width: calc(100% / 3);
+                    }
+                    @include mobile_sm{
+                        width: 100%;
+                    }
+                    .inner_img{
+                        @include img(90%);
+                        box-shadow: none;
+                        img{
+                            @include pos;
+                            @include object;
+                        }
+                        .x_btn{
+                            width: 2.5rem;
+                            height: 2.5rem;
+                            font-size: 1.6rem;
+                        }
+                    }
+                }
+            }
+        }
+        .btn_blk{
+            .filter_btn{
+                img{
+                    height: 2rem;
+                    filter: brightness(0) invert(1);
+                }
+            }
         }
     }
 }
