--- a/styles/style.module.scss
+++ b/styles/style.module.scss
@@ -4,7 +4,7 @@
     position: relative;
     overflow: hidden;
     .mb_bg{
-        @include pos($l:null,$r:-10rem,$t:null);
+        @include pos($l:null,$r:-14rem,$t:null);
         padding-bottom: 45%;
         width: 100%;
         height: 100%;
@@ -15,6 +15,32 @@
         img{
             @include object(contain,bottom);
             @include pos;
+        }
+    }
+    .blk_shield{
+        @include flex;
+        column-gap: 1rem;
+        max-width: 45rem;
+        .icon_img{
+            width: 7rem;
+            height: 7rem;
+            overflow: hidden;
+            img{
+                @include object(contain);
+                filter: brightness(0) invert(1);
+            }
+        }
+        .cn_tnt{
+            flex: 1;
+            p{
+                margin: 0!important;
+                font-size: 1.5rem!important;
+                font-family: 'Regular';
+            }
+            h4{
+                color: $light;
+                margin-bottom: .5rem;
+            }
         }
     }
     // @include ipad_sm{
@@ -47,7 +73,7 @@
                 color: $light;
                 margin-bottom: 3rem;
                 @include mobile_sm{
-                    max-width: 75%;
+                    max-width: 70%;
                     line-height: 1.5;
                 }
                 @include mobile_sm{
@@ -3960,6 +3986,106 @@
                 img{
                     height: 2rem;
                     filter: brightness(0) invert(1);
+                }
+            }
+        }
+    }
+}
+
+// ===============new=======
+
+.new_become_professional_banner{
+    background: url(/images/become_professional.png);
+    @include bg;
+    &:before{
+        @include pos;
+        content: '';
+        background: linear-gradient(90deg, #004AAD 0.61%, rgba(0, 74, 173, 0.76) 48.12%, rgba(148, 179, 221, 0.32) 99.74%, rgba(252, 253, 254, 0.01) 99.75%);
+    }
+    .flex{
+        .colL{
+            width: 50%;
+            padding-right: 2rem;
+            align-self: center;
+            @include ipad_sm{
+                width: 100%;
+                padding-right: 0;
+            }
+            h1{
+                color: $light;
+            }
+            p{
+                color: $light;
+            }
+        }
+        .colR{
+            width: 40%;
+            margin-left: auto;
+            @include ipad_sm{
+                width: 100%;
+                margin-top: 2rem;
+            }
+            .inner{
+                @include block;
+                position: relative;
+                text-align: center;
+                padding: 5rem;
+                h1{
+                    font-size: 5.5rem;
+                }
+            }
+        }
+    }
+}
+.difference_maintenance_sec{
+    .sec_heading{
+        margin-bottom: 4rem;
+    }
+    .flex{
+        margin: -1rem;
+        &.custom_owned{
+            margin-bottom: 4rem;
+            @include block;
+        }
+        .col{
+            padding: 1rem;
+            &:first-child{
+                ul{
+                    li{
+                        &:before{
+                            background:url(/images/green-check.svg);
+                            @include bg(contain);
+                        }
+                    }
+                }
+            }
+            &:last-child{
+                ul{
+                    li{
+                        &:before{
+                            background:url(/images/red-cross.svg);
+                            @include bg(contain);
+                        }
+                    }
+                }
+            }
+            h4{
+                margin-bottom: 2rem;
+            }
+            ul{
+                @include list;
+                li{
+                    &:not(:last-child){
+                        margin-bottom: 1rem;
+                    }
+                    padding-left: 2.5rem;
+                    position: relative;
+                    &:before{
+                        @include pos($r:null,$t:.5rem);
+                        content: '';
+                        width: 1.5rem;
+                        height: 1.5rem;
+                    }
                 }
             }
         }
