--- a/styles/style.module.scss
+++ b/styles/style.module.scss
@@ -73,15 +73,12 @@
                 color: $light;
                 margin-bottom: 3rem;
                 @include mobile_sm{
-                    max-width: 70%;
+                    max-width: 60%;
                     line-height: 1.5;
                 }
                 @include mobile_sm{
                     margin-bottom: 3rem;
                     font-size: 2rem;
-                }
-                @include mobile_xs{
-                    max-width: 91%;
                 }
             }
             p{
@@ -4030,6 +4027,9 @@
                 position: relative;
                 text-align: center;
                 padding: 5rem;
+                @include mobile_sm{
+                    padding: 3rem;
+                }
                 h1{
                     font-size: 5.5rem;
                 }
@@ -4042,10 +4042,12 @@
         margin-bottom: 4rem;
     }
     .flex{
-        margin: -1rem;
         &.custom_owned{
-            margin-bottom: 4rem;
             @include block;
+            box-shadow: none;
+            @include mobile{
+                flex-direction: column;
+            }
         }
         .col{
             padding: 1rem;
@@ -4085,6 +4087,195 @@
                         content: '';
                         width: 1.5rem;
                         height: 1.5rem;
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+
+._faq_sec{
+    padding-top: 0;
+    .sec_heading{
+        max-width: 80rem;
+        margin: 0 auto 3rem;
+        text-align: center
+    }
+    .faq_blk{
+        @include block;
+        box-shadow: none;
+        padding: 5rem 12rem;
+        @include mobile{
+        padding: 0;
+        background-color: transparent;
+        }
+        .outer_faq{
+          border: 1.5px solid rgba($primary-color, 0.08);
+          @include radius(4px);
+          padding: 1.7rem 2rem;
+          margin-bottom: 1.5rem;
+          @include mobile_sm{
+            padding: 1.7rem 1rem;
+          }
+          &:last-child{
+            margin-bottom: 0;
+          }
+          .accordion__header{
+            position: relative;
+            h4{
+              margin-bottom: 0;
+              position: relative;
+              cursor: pointer;
+              @include trans;
+              padding-left: 3rem;
+              font-size: 1.9rem;
+              &:hover{
+                @include trans;
+                color: $color;
+              }
+              &:after{
+                @include pos($r:null);
+                content: '';
+                background: url(/images/arrow-down.svg);
+                @include bg(contain);
+                width: 2rem;
+                @include flex(center,center);
+              }
+            }
+            .action_btns{
+                @include pos($l:null);
+                @include flex;
+                column-gap: .4rem;
+                button{
+                    background-color: transparent;
+                    border: none;
+                    padding: 0;
+                    width: 2rem;
+                    height: 2rem;
+                    overflow: hidden;
+                    img{
+                        @include object(contain);
+                    }
+                }
+            }
+          }
+          .accordion__details{
+            overflow: hidden;
+            height: 0;
+            > *:first-child{
+                margin-top: 1.4rem;
+              }
+            p{
+               &:nth-last-child(1){
+                margin-bottom: 0;
+               }
+            }
+            ul{
+                @include flex($flow:wrap);
+                @include list;
+                li{
+                    width: 50%;
+                    margin-bottom: 1rem;
+                    padding-left: 2.5rem;
+                    position: relative;
+                    @include ipad_sm{
+                        width: 100%;
+                    }
+                    &:before{
+                        @include pos($r:null,$t:.2rem);
+                        content: '';
+                        background:url(/images/CheckCircle.svg);
+                        @include bg(contain);
+                        width: 2rem;
+                        height: 2rem;
+                    }
+                    
+                }
+            }
+             
+          }
+          &.open{
+            box-shadow: 8px 16px 32px -8px rgba(7, 26, 43, 0.06);
+            border-color: $color;
+            .accordion__header{
+              h4{
+                &:after{
+                  background: url(/images/arrow-up.svg);
+                  @include bg(contain);
+                }
+              }
+            }
+            .accordion__details{
+              height: auto;
+              
+            }
+          }
+        }
+      }
+}
+
+.mini_banner{
+    padding-top: 0;
+    .top_heading{
+        max-width: 70rem;
+        margin: 0 auto 3rem;
+    }
+    .inner_banner{
+        position: relative;
+        background: url(/images/11.webp);
+        @include bg;
+        padding:10rem 5rem;
+        @include radius(10px);
+        @include mobile_sm{
+            padding: 4rem 2rem;
+        }
+        overflow: hidden;
+        &:before{
+            @include pos;
+            content: '';
+            background: linear-gradient(90deg, #ff3d3d 0.61%, rgba(0, 74, 173, 0.76) 48.12%, rgba(148, 179, 221, 0.32) 99.74%, rgba(252, 253, 254, 0.01) 99.75%);
+        }
+        .cntnt{
+            max-width: 40rem;
+            position: relative;
+            h2,p{
+                color: $light;
+            }
+        }
+    }
+}
+
+.question_new_sec{
+    padding-top: 0;
+    .flex{
+        max-width: 90rem;
+        margin: 0 auto;
+        .col{
+            width: 50%;
+            flex: unset;
+            padding: 1rem;
+            @include mobile_md{
+                width: 100%;
+            }
+            .inner{
+                @include block;
+                box-shadow: none;
+                background-color: rgba($primary-color, 0.06);
+                text-align: center;
+                padding: 5rem;
+                height: 100%;
+                @include mobile_sm{
+                    padding: 3rem;
+                }
+                h4{
+                    color: $color;
+                }
+                p{
+                    em{
+                        display: block;
+                        font-style: normal;
                     }
                 }
             }
