--- a/styles/style.module.scss
+++ b/styles/style.module.scss
@@ -4364,7 +4364,7 @@
                 max-width: 70%;
                 justify-content: space-between;
                 position: relative;
-                margin: 0 auto 5rem;
+                margin: 0 0 5rem;
                 @include mobile{
                     max-width: 100%;
                 }
