--- a/styles/style.module.scss
+++ b/styles/style.module.scss
@@ -295,6 +295,7 @@
                 margin-bottom: 0;
                 font-family: 'SemiBold';
                 color: $color;
+                height: 4rem;
             }
         }
     }
