--- a/styles/style.module.scss
+++ b/styles/style.module.scss
@@ -5570,3 +5570,45 @@
         // }
     }
 }
+
+.partners_sec{
+    .sec_heading{
+        margin-bottom: 3rem;
+    }
+    .flex{
+        margin: -1rem;
+        justify-content: center;
+        .col{
+            flex: unset;
+            width: 50%;
+            padding: 1rem;
+            @include mobile_md{
+                width: 100%;
+            }
+            .inner{
+                background-color: #fff;
+                @include radius(6px);
+                padding: 3rem;
+                .image{
+                    width: 25rem;
+                    height: 8rem;
+                    overflow: hidden;
+                    margin: 0 0 1rem;
+                    @include mobile_sm{
+                        width: 100%;
+                        height: auto;
+                        margin-bottom: 2rem;
+                    }
+                    img{
+                        @include object(contain);
+                    }
+                }
+                .cntnt{
+                    p{
+                        margin-bottom: 0;
+                    }
+                }
+            }
+        }
+    }
+}
